--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.0.4",
     "next-intl": "^3.4.1",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
